--- a/index.html
+++ b/index.html
@@ -1,20 +1,24 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>skip ad</title>
-    <link rel="stylesheet" href="style.css">
+    <title>DunkShop</title>
+    <link rel="stylesheet" href="css/style.css">
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"/>
 </head>
 <body style="height: 2000px;">
-	<header>
-		<div id="logo">Dunk<span id="logo-s">Shop</span></div>
-		<span class="content-header"><a class="act" href="#">CONTATO</a></span>
-		<span class="content-header"><a href="#">PRODUTOS</a></span>
-		<span class="content-header"><a href="#Sobre Nós">SOBRE NÓS</a></span>
-		<span class="content-header"><a href="#">MENU</a></span>
-		
-	</header>
+	<nav id="header">
+		<ul>
+			<li id="logo">Dunk<span id="logo-s">Shop</span></li>
+			<li class="navbar-toggle"><i class="fas fa-bars"></i></li>
+			<li class="content-header"><a href="#" class="ch">MENU</a></li>
+			<li class="content-header"><a href="#Sobre Nós" class="ch">SOBRE NÓS</a></li>
+			<li class="content-header"><a href="#Produtos" class="ch">PRODUTOS</a></li>
+			<li class="content-header"><a class="act" href="contact.html">CONTATO</a></li>
+		</ul>
+	</nav>
 	
-    <div class="slider">
+	
+    <div class="slider" id="Slider">
 		<!-- fade css -->
 		<div class="myslide fade">
 			<div class="txt">
@@ -71,16 +75,42 @@
 		<!-- /onclick js -->
 	</div>
 
-	<div class="container" id="Sobre Nós">
-		<div class="about">
+	<div class="container">
+		<div class="about" id="Sobre Nós">
 			<h2>Sobre Nós</h2>
 			<h4>Nossa missão é fornecer <strong>produtos</strong> de alta qualidade para entusiastas de basquete em todo o mundo, ajudando a melhorar seu desempenho e <strong>paixão</strong> pelo jogo. Acreditamos no poder transformador do esporte e trabalhamos diariamente para apoiar jogadores de todos os níveis a alcançar seu melhor <strong>potencial</strong>.</h4>
 			<button class="btn"><a href="">Saiba Mais</a></button>
 		</div>
 		<img src="imgS1.jpg" alt="">
 	</div>
-	
-<script src="script.js"></script>
+
+	<h1 class="titulo-produtos" id="Produtos">Produtos</h1>
+
+	<div class="search-filter">
+        <div class="search-container">
+            <input type="text" id="search-bar" placeholder="Buscar produtos por nome ou categoria...">
+            <svg
+                class="search-icon"
+                width="24"
+                height="24"
+                viewBox="0 0 24 24"
+                fill="none"
+                xmlns="http://www.w3.org/2000/svg"
+            >
+                <path
+                    fill-rule="evenodd"
+                    clip-rule="evenodd"
+                    d="M18.319 14.4326C20.7628 11.2941 20.542 6.75347 17.6569 3.86829C14.5327 0.744098 9.46734 0.744098 6.34315 3.86829C3.21895 6.99249 3.21895 12.0578 6.34315 15.182C9.22833 18.0672 13.769 18.2879 16.9075 15.8442C16.921 15.8595 16.9351 15.8745 16.9497 15.8891L21.1924 20.1317C21.5829 20.5223 22.2161 20.5223 22.6066 20.1317C22.9971 19.7412 22.9971 19.1081 22.6066 18.7175L18.364 14.4749C18.3493 14.4603 18.3343 14.4462 18.319 14.4326ZM16.2426 5.28251C18.5858 7.62565 18.5858 11.4246 16.2426 13.7678C13.8995 16.1109 10.1005 16.1109 7.75736 13.7678C5.41421 11.4246 5.41421 7.62565 7.75736 5.28251C10.1005 2.93936 13.8995 2.93936 16.2426 5.28251Z"
+                    fill="currentColor"
+                />
+            </svg>
+        </div>
+    </div>
+
+    <section class="produtos" id="product">  
+    </section>
+    <script src="script.js"></script>
+	<script src="header.js"></script>
 </body>
 </html>
 
