--- a/detalhes.html
+++ b/detalhes.html
@@ -2,10 +2,12 @@
 <html>
 <head>
     <title>Detalhes do Produto</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/product-details.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"/>
 </head>
-<body style="height: 2000px;">
+<body>
     <nav id="header">
 		<ul>
 			<li id="logo">Dunk<span id="logo-s">Shop</span></li>
