--- a/contact.html
+++ b/contact.html
@@ -12,9 +12,9 @@
 		<ul>
 			<li id="logo">Dunk<span id="logo-s">Shop</span></li>
 			<li class="navbar-toggle"><i class="fas fa-bars"></i></li>
-			<li class="content-header"><a href="index.html" class="ch">MENU</a></li>
-			<li class="content-header"><a href="index.html#Sobre Nós" class="ch">SOBRE NÓS</a></li>
-			<li class="content-header"><a href="index.html#Produtos" class="ch">PRODUTOS</a></li>
+			<li class="content-header"><a href="main.html" class="ch">MENU</a></li>
+			<li class="content-header"><a href="main.html#Sobre Nós" class="ch">SOBRE NÓS</a></li>
+			<li class="content-header"><a href="main.html#Produtos" class="ch">PRODUTOS</a></li>
 		</ul>
 	</nav>
     <form action="https://formsubmit.co/ajax/fdorneles63@gmail.com" method="POST" data-form>
