--- a/detalhes.html
+++ b/detalhes.html
@@ -13,8 +13,8 @@
 		<ul>
 			<li id="logo">Dunk<span id="logo-s">Shop</span></li>
 			<li class="navbar-toggle"><i class="fas fa-bars"></i></li>
-			<li class="content-header"><a href="index.html" class="ch">MENU</a></li>
-			<li class="content-header"><a href="index.html#Sobre Nós" class="ch">SOBRE NÓS</a></li>
+			<li class="content-header"><a href="main.html" class="ch">MENU</a></li>
+			<li class="content-header"><a href="main.html#Sobre Nós" class="ch">SOBRE NÓS</a></li>
 			<li class="content-header"><a href="#products-list" class="ch">PRODUTOS</a></li>
 			<li class="content-header"><a class="act" href="contact.html">CONTATO</a></li>
 		</ul>
