--- a/main.html
+++ b/main.html
@@ -17,15 +17,32 @@
 			<li class="content-header"><a href="#Sobre Nós" class="ch">SOBRE NÓS</a></li>
 			<li class="content-header"><a href="#Produtos" class="ch">PRODUTOS</a></li>
 			<li class="content-header"><a class="ch" href="contact.html">CONTATO</a></li>
+			<li class="content-header no"><a class="ch" href="">CARRINHO</a></li>
 			<li class="content-header">
 				<a class="act" id="loggedUserFName" href="homepage.html">
 					<i class="fas fa-portrait"></i>
 					<span id="userName"></span> <!-- Elemento para inserir o nome do usuário -->
 				</a>
 			</li>
+			<li class="content-header">
+				<div class="cart-icon">
+					<i class='fas fa-shopping-cart'></i>
+					<span class="quantity">0</span>
+				</div> 
+			</li>
 		</ul>
 	</nav>
 	
+	<div class="cart-card" id="cart-card">
+		<div class="inner">
+        	<h2>Carrinho</h2>
+        	<div id="cart-items"></div>
+			</div>
+        <div class="cart-buttons">
+            <button id="close-cart">Fechar</button>
+            <button id="total-price">Total: R$ 0,00</button>
+        </div>
+    </div>
 	
     <div class="slider" id="Slider">
 		<!-- fade css -->
@@ -33,6 +50,7 @@
 			<div class="txt">
 				<h1>Conquiste a Quadra</h1>
 				<p>Com nossos tênis de basquete,<br>cada passo é um salto para a vitória.</p>
+				<button class="btn"><a href="#Produtos">Produtos</a></button>
 			</div>
 			<img src="img1.jpg" style="width: 100%; height: 100%;">
 		</div>
@@ -41,6 +59,7 @@
 			<div class="txt">
 				<h1>Domine o Jogo</h1>
 				<p>Equipamentos de basquete<br>projetados para elevar seu desempenho ao máximo.</p>
+				<button class="btn"><a href="#Produtos">Produtos</a></button>
 			</div>
 			<img src="img2.jpg" style="width: 100%; height: 100%;">
 		</div>
@@ -49,6 +68,7 @@
 			<div class="txt">
 				<h1>Salto Perfeito</h1>
 				<p>Descubra a combinação perfeita<br>de conforto e estilo com nossa linha de tênis de basquete.</p>
+				<button class="btn"><a href="#Produtos">Produtos</a></button>
 			</div>
 			<img src="img3.jpg" style="width: 100%; height: 100%;">
 		</div>
@@ -57,6 +77,7 @@
 			<div class="txt">
 				<h1>Paixão Pelo Basquete</h1>
 				<p>Desde iniciantes até profissionais,<br>temos o equipamento ideal para cada jogador.</p>
+				<button class="btn"><a href="#Produtos">Produtos</a></button>
 			</div>
 			<img src="img4.jpg" style="width: 100%; height: 100%;">
 		</div>
@@ -65,6 +86,7 @@
 			<div class="txt">
 				<h1>Inovação em Cada Passo</h1>
 				<p>Tênis de basquete que oferecem suporte<br>e agilidade para todos os movimentos.</p>
+				<button class="btn"><a href="#Produtos">Produtos</a></button>
 			</div>
 			<img src="img5.jpg" style="width: 100%; height: 100%;">
 		</div>
@@ -120,10 +142,11 @@
     </section>
     <script src="script.js"></script>
 	<script src="header.js"></script>
+	<script src="carrinho.js"></script>
 	<script type="module" src="homepage.js"></script>
 	<script>
 		ScrollReveal({
-			reset: true,
+			reset: false,
 			distance: '60px',
 			duration: 2000,
 			delay: 50
