--- a/contact.html
+++ b/contact.html
@@ -15,6 +15,12 @@
 			<li class="content-header"><a href="main.html" class="ch">MENU</a></li>
 			<li class="content-header"><a href="main.html#Sobre Nós" class="ch">SOBRE NÓS</a></li>
 			<li class="content-header"><a href="main.html#Produtos" class="ch">PRODUTOS</a></li>
+            <li class="content-header">
+				<a class="act" id="loggedUserFName" href="homepage.html">
+					<i class="fas fa-portrait"></i>
+					<span id="userName"></span> <!-- Elemento para inserir o nome do usuário -->
+				</a>
+			</li>
 		</ul>
 	</nav>
     <form action="https://formsubmit.co/ajax/fdorneles63@gmail.com" method="POST" data-form>
@@ -29,5 +35,6 @@
     </form>
     <script src="contact.js"></script>
     <script src="header.js"></script>
+    <script type="module" src="homepage.js"></script>
 </body>
 </html>
