--- a/homepage.html
+++ b/homepage.html
@@ -271,12 +271,12 @@ nav li{
 		</ul>
 	</nav>
     <div class="container">
-    <h1>Welcome to the Homepage</h1>
+    <h1>Pagína do Usuário</h1>
         <div class="itens">
-            <div>First Name: <span id="userName"></span></div>
-            <div>Last Name: <span id="loggedUserLName"></span></div>
+            <div>Nome: <span id="userName"></span></div>
+            <div>Sobrenome: <span id="loggedUserLName"></span></div>
             <div>Email: <span id="loggedUserEmail"></span></div>
-            <button id="logout">Logout</button>
+            <button id="logout">SAIR</button>
         </div>
     </div>
     <script src="header.js"></script>
