--- a/main.html
+++ b/main.html
@@ -17,7 +17,7 @@
 			<li class="content-header"><a href="#Sobre Nós" class="ch">SOBRE NÓS</a></li>
 			<li class="content-header"><a href="#Produtos" class="ch">PRODUTOS</a></li>
 			<li class="content-header"><a class="ch" href="contact.html">CONTATO</a></li>
-			<li class="content-header no"><a class="ch" href="">CARRINHO</a></li>
+			<li class="content-header no"><div class="card-name"><a class="ch">CARRINHO</a></div></li>
 			<li class="content-header">
 				<a class="act" id="loggedUserFName" href="homepage.html">
 					<i class="fas fa-portrait"></i>
