--- a/index.html
+++ b/index.html
@@ -10,18 +10,18 @@
 </head>
 <body>
     <div class="container" id="signup" style="display:none;">
-      <h1 class="form-title">Register</h1>
+      <h1 class="form-title">Cadastro</h1>
       <form method="post" action="">
         <div id="signUpMessage" class="messageDiv" style="display:none;"></div>
         <div class="input-group">
            <i class="fas fa-user"></i>
            <input type="text"  id="fName" placeholder="First Name" required>
-           <label for="fname">First Name</label>
+           <label for="fname">Nome</label>
         </div>
         <div class="input-group">
             <i class="fas fa-user"></i>
             <input type="text"  id="lName" placeholder="Last Name" required>
-            <label for="lName">Last Name</label>
+            <label for="lName">Sobrenome</label>
         </div>
         <div class="input-group">
             <i class="fas fa-envelope"></i>
@@ -31,25 +31,25 @@
         <div class="input-group">
             <i class="fas fa-lock"></i>
             <input type="password" id="rPassword"  placeholder="Password" required>
-            <label for="rPassword">Password</label>
+            <label for="rPassword">Senha</label>
         </div>
-       <button class="btn" id="submitSignUp" >Sign Up</button>
+       <button class="btn" id="submitSignUp" >Cadastrar</button>
       </form>
       <p class="or">
-        ----------or--------
+        -----------ou-----------
       </p>
       <div class="icons">
         <i class="fab fa-google"></i>
         <i class="fab fa-facebook"></i>
       </div>
       <div class="links">
-        <p>Already Have Account ?</p>
-        <button id="signInButton">Sign In</button>
+        <p>ja possui uma conta ?</p>
+        <button id="signInButton">Entrar</button>
       </div>
     </div>
 
   <div class="container" id="signIn">
-        <h1 class="form-title">Sign In</h1>
+        <h1 class="form-title">Entrar</h1>
         <form method="post" action="">
           <div id="signInMessage" class="messageDiv" style="display:none;"></div>
 
@@ -61,23 +61,23 @@
           <div class="input-group">
               <i class="fas fa-lock"></i>
             <input type="password" id="password"  placeholder="Password" required>
-              <label for="password">Password</label>
+              <label for="password">Senha</label>
           </div>
           <p class="recover">
-            <a href="#">Recover Password</a>
+            <a href="#">Esqueceu sua senha? </a>
           </p>
-         <button  class="btn"  id="submitSignIn">Sign In</button>
+         <button  class="btn"  id="submitSignIn">Entrar</button>
         </form>
         <p class="or">
-          ----------or--------
+          -----------ou-----------
         </p>
         <div class="icons">
           <i class="fab fa-google"></i>
           <i class="fab fa-facebook"></i>
         </div>
         <div class="links">
-          <p>Don't have account yet?</p>
-          <button id="signUpButton">Sign Up</button>
+          <p>Ainda não tem uma conta?</p>
+          <button id="signUpButton">Cadastre-se</button>
         </div>
       </div>
       <script src="login.js"></script>
